--- a/styles.css
+++ b/styles.css
@@ -9,17 +9,21 @@ html, body{
 body {
 	text-align: center;
 	margin: 0;
+	background-color: #5b3b6b;
 }
 
 .calculator {
 	border: 4px solid rgb(0, 0, 0);
+	border-right: 10px solid rgb(9, 50, 4);
+	border-bottom: 10px solid rgb(9, 50, 4);
 	background-color: rgb(60, 134, 88);
 	margin-left: auto;
 	margin-right: auto;
-	padding: 20px 30px;
+	padding: 20px;
 	border-radius: 40px;
 	width: 400px;
 }
+
 
 .screen {
 	border: 1px solid rgb(58, 11, 58);
@@ -41,35 +45,40 @@ body {
 	padding: 10px;
 }
 
-button {
-	padding: 25px;
-	border-radius: 70px;
-	color: rgb(209, 242, 223);
+.operators, .digits {
+	display: flex;
+	flex-direction: column;
 }
 
 .row {
 	display: flex;
 }
-#null{
-	flex: 1;
+
+button {
+	padding: 27px;
+	border-radius: 10px;
+	color: rgb(209, 242, 223);
+	border-right: solid rgb(9, 50, 4) 5px;
+	border-bottom: solid rgb(9, 50, 4) 3px;
 }
 
-#equal{
-	flex: 9;
+.digit {
+	background-color: #1A6C83;
 }
 
 .operator {
 	background-color: brown;
 }
 
-.digit, .equal {
-	background-color: #1A6C83;
-}
-.operators, .digits {
-	display: flex;
-	flex-direction: column;
+button:hover {
+	border-color: #580e5a;
+	background-color: goldenrod;
+	color: #0e0f5a;
 }
 
+
+
+
 .row, .operators, .digits, .buttons {
-	gap: 15px;
+	gap: 25px;
 }
