--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body {
 	border-right: 15px solid rgb(9, 50, 4);
 	border-bottom: 8px solid rgb(9, 50, 4);
 	border-top: 6px solid rgb(9, 50, 4);
+	border-left: 4px solid rgb(9, 50, 4);
 	background-color: rgb(60, 134, 88);
 	margin-left: auto;
 	margin-right: auto;
@@ -35,6 +36,7 @@ body {
 	border-bottom: solid 3px rgb(9, 50, 4);
 	display: flex;
 	justify-content: flex-end;
+	overflow: hidden;
 	align-items: center;
 	font-size: 30px;
 	padding-right: 10px;
