--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ body {
 	border-top: 6px solid rgb(9, 50, 4);
 	border-left: 4px solid rgb(9, 50, 4);
 	background-color: rgb(60, 134, 88);
+	margin-top: 50px;
 	margin-left: auto;
 	margin-right: auto;
 	padding: 20px;
@@ -73,11 +74,11 @@ button {
 	background-color: #1A6C83;
 }
 
-.operator {
+.operator, #equal, #clear {
 	background-color: brown;
 }
 
-button:hover {
+button:hover, #equal:hover, #clear:hover {
 	border-color: #580e5a;
 	background-color: goldenrod;
 	color: #0e0f5a;
@@ -88,8 +89,6 @@ button:active {
 	border-left: solid rgb(9, 50, 4) 3px;
 
 }
-
-
 
 .row, .operators, .digits, .buttons {
 	gap: 25px;
